--- a/.config.users.json
+++ b/.config.users.json
@@ -22,6 +22,7 @@
                     "json-view": true
                 }
             }
-        }
+        },
+        "menu-menu-item-sidebar": true
     }
 }
