--- a/.config.users.json
+++ b/.config.users.json
@@ -19,7 +19,7 @@
             "dialog": {
                 "export": {
                     "pretty": true,
-                    "json-view": true
+                    "json-view": false
                 }
             }
         },
